--- a/docs/team/joshuaseetss.adoc
+++ b/docs/team/joshuaseetss.adoc
@@ -47,7 +47,7 @@ I was also in charge of Testing and UI, ensuring that the coverall percentage do
 ** What it does: The shortcut feature enables FinSec to convert an unknown command into a shortcut, which becomes a valid command for future use.
 ** Justification: This feature significantly enhances user experience of FinSec as it allows users to create their own manual shortcuts for commands. Our target audience, Financial Secretaries, would find their tasks (typically data entry) much aided by FinSec which removes the need to type in the whole command, such as "add_claim" for every entry. Instead, they can, using FinSec, create an alias such as "ac" for the command "add_claim". This would avoid unnecessary duplication of commands, thereby raising efficiency.
 ** Implementation: For this to work, the flow of command execution in FinSec has to be altered. Executing an unknown command that FinSec does not recognize changes the command execution pathway and creates a new command that FinSec will recognise. This is facilitated by the use of a TreeMap in the parser which stores a list of all available commands and their actions as key-value pairs.
-** Highlights: This feature enhances the entire software model to be more Object Oriented since through this implementation, commands are created as objects. This is different from the previous implementation of commands in the Address Book 3 (AB3). With a higher level of abstraction, future features would be easier for implementation. However, the implementation of this feature is challenging because it requires key changes to the flow of command execution of FinSec. After implementing this feature, without proper communication, my team members would have difficulty with the sudden change in the flow of the program. This was easily overcome with proper communication with my team members and more specific documentation in the java docs.
+** Highlights: This feature enhances the entire software model to be more Object Oriented since through this implementation, commands are created as objects. This is different from the previous implementation of commands in the Address Book 3 (AB3). With a higher level of abstraction, future features would be easier for implementation.
 
 * *Minor enhancement*: Added the *Income feature*
 ** What it does: This feature allows users (typically Financial Secretaries) to enter Income transactions into the FinSec application and track their income entries.
