--- a/docs/team/limhawjia.adoc
+++ b/docs/team/limhawjia.adoc
@@ -62,14 +62,14 @@ _{you can add/remove categories in the list above}_
 
 == Contributions to the User Guide
 
-
 |===
-|_Given below are sections I contributed to the User Guide. They showcase my ability to write documentation targeting end-users._
+|_Given below are sections that I contributed to the User Guide. They showcase my ability to write documentation targeting end-users._
 |===
 
-include::../UserGuide.adoc[tag=delete]
-
-include::../UserGuide.adoc[tag=dataencryption]
+include::../UserGuide.adoc[tag=overview]
+include::../UserGuide.adoc[tag=beforestart]
+include::../UserGuide.adoc[tag=submit]
+include::../UserGuide.adoc[tag=notes]
 
 == Contributions to the Developer Guide
 
@@ -77,9 +77,9 @@ include::../UserGuide.adoc[tag=dataencryption]
 |_Given below are sections I contributed to the Developer Guide. They showcase my ability to write technical documentation and the technical depth of my contributions to the project._
 |===
 
-include::../DeveloperGuide.adoc[tag=undoredo]
+include::../DeveloperGuide.adoc[tag=logic]
 
-include::../DeveloperGuide.adoc[tag=dataencryption]
+include::../DeveloperGuide.adoc[tag=programevaluation]
 
 
 == PROJECT: PowerPointLabs
