--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -286,6 +286,7 @@ Examples:
 * Only one status is allowed at a time.
 ****
 
+// tag::includeNotes[]
 === Notes
 ==== Add Note: `addnote`
 
@@ -330,6 +331,7 @@ Examples:
 List all note. +
 Format: `listnote`
 
+// end::includeNotes[]
 === Student List
 
 ==== Add a student: 'add'
