--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -73,7 +73,14 @@ e.g. typing *`help`* and pressing kbd:[Enter] will open the help window.
 ====
 *About the Name Parameter*
 
-* Name is considered the same if they match exactly while ignoring case sensitivity. For example, `Chicken marinade` is the same as `chicken mARINADE`.
+* Name is considered the same if they match exactly while ignoring case sensitivity. For example, `Chicken` is the same as `Chicken` and `chicKEN`.
+====
+
+[[same-tag]]
+====
+*About the Tag Parameter*
+
+* Tag is considered the same if they match exactly considering case sensitivity. For example, `Chicken` is the same as `Chicken` but not `chiCKEN`,
 ====
 
 [[amount-parameter]]
@@ -145,7 +152,7 @@ Format: `glist add n/ITEM_NAME e/EXPIRY_DATE a/AMOUNT [t/TAG]`
 
 ****
 * `e/EXPIRY_DATE` must follow the format `dd/MM/yyyy`.
-* `a/AMOUNT` must have a magnitude i.e. measurable quantity. Magnitude and unit can be separated by a space.
+* `a/AMOUNT` must have a magnitude i.e. measurable quantity and a unit. Magnitude and unit can be separated by spaces. Refer <<amount-parameter, here>> for more info.
 * There may be more than one tag field.
 * The input fields can be in any order.
 * Item with *either <<same-name, same name>> or expiry date* as the existing ones can be added.
@@ -156,8 +163,8 @@ Examples:
 
 * `glist add n/Fuji apples e/30/10/2019 t/healthy a/10units` +
 Add Fuji apples of quantity 10 units, tagged as "healthy" and expiring on 30 October 2019.
-* `glist add n/salad a/3 e/25/09/2019` +
-Add salad of quantity 3, untagged and expiring on 25 September 2019.
+* `glist add n/salad a/3units e/25/09/2019` +
+Add salad of quantity 3 units, untagged and expiring on 25 September 2019.
 * `glist add n/tea a/200 ml e/18/10/2019 t/fresh t/drink` +
 Add tea of quantity 200 ml, tagged as "fresh" and "drink" and expiring on 18 October 2019.
 
@@ -178,12 +185,7 @@ Reduces the amount left of a grocery item by the specified amount. +
 Format: `glist use INDEX a/AMOUNT`
 
 ****
-* Only the units in the following unit categories are supported:
-** `Weight`: `kg`, `g`, `oz`, `lbs`
-** `Volume`: `L`, `ml`
-** `Quantity`: `units`
-* Spaces between magnitude and unit is allowed.
-* Cross conversion between units of the same categories is supported. (Refer <<amount-parameter, here>> for more info)
+* The amount left of a grocery item must be more than or equal to the specified amount to use.
 * If the unit of input amount is different from the unit of item, the resultant amount would follow the unit of the original item. e.g. If an item of `1kg` is used by `300g`, it would become `0.7kg` and not `700g`.
 ****
 
@@ -208,7 +210,7 @@ Format: `glist edit INDEX [n/ITEM_NAME] [e/EXPIRY_DATE] [t/TAG]`
 * You can remove all the item's tags by typing `t/` without specifying any tags after it.
 * *As the grocery list does not allow duplicates (items with <<same-name, same name>> and expiry date), any attempt of edit to achieve duplication is not allowed and would result in an error.*
 * *User is encouraged to practise discretion when editing an item as iFridge is unable to recognise items based on its name and compare between the name and amount of an item.*
-For example, if an item named `Milk` with amount `2L` is edited to have name `Beef`, iFridge would allow the edit, even though `Beef` with amount `2L` does not sound logical.
+For example, if an item named `Milk` with amount `2L` is edited to have the name `Beef`, iFridge would allow the edit, even though `Beef` with amount `2L` does not sound logical.
 ****
 
 Examples:
