--- a/docs/team/lawncegoh.adoc
+++ b/docs/team/lawncegoh.adoc
@@ -19,7 +19,7 @@ This new application, FinSec, allows for these Finance Secretaries to easily sto
 This is what our project looks like:
 [[fig-PPP-ui]]
 .Structure of the Logic Component
-image::PPP-ui.png[]
+image::PPP-ui.png[width="400"]
 
 == Summary of contributions
 
@@ -86,11 +86,11 @@ https://github.com/AY1920S1-CS2103T-W12-1/main/issues/262[262]
 *** Wrote additional tests for existing features to increase coverage from 49% to 53%. https://coveralls.io/jobs/55463719[529] and from 57% to 60%. https://coveralls.io/builds/26886555[561]
 
 ** Documentation:
-*** Fixed the formatting of the developer guide and made major changes to my own section: https://github.com/AY1920S1-CS2103T-W12-1/main/pull/143[#143]
+*** Fixed the formatting of the developer guide and made major changes to my own section: https://github.com/AY1920S1-CS2103T-W12-1/main/pull/143[143]
 
 ** Community:
-*** PRs reviewed (with non-trivial review comments): https://github.com/AY1920S1-CS2103T-W12-1/main/pull/74[#74],
-https://github.com/AY1920S1-CS2103T-W12-1/main/pull/58[#58], https://github.com/AY1920S1-CS2103T-W12-1/main/pull/40[#40]
+*** PRs reviewed (with non-trivial review comments): https://github.com/AY1920S1-CS2103T-W12-1/main/pull/74[74],
+https://github.com/AY1920S1-CS2103T-W12-1/main/pull/58[58], https://github.com/AY1920S1-CS2103T-W12-1/main/pull/40[40]
 *** Reported bugs and suggestions for other teams in the class (examples:  https://github.com/nus-cs2103-AY1920S1/forum/issues/139[139],
 https://github.com/nus-cs2103-AY1920S1/forum/issues/45[2]
 
